[package]
name = "background-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24", features = ["jpeg", "png"], default-features = false }
walkdir = "2.4"
eframe = "0.28"
egui = "0.28"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
rayon = "1.8"
num_cpus = "1.16"
sha1 = "0.10"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
